# opencv-demo

./: CMakeLists.txt  colorReduce.cpp  cvMat.cpp  external.cpp  laplace.cpp  operator.cpp  showImage.cpp
color-detect/: Detector.cpp  Detector.h  main.cpp
grab-cut/: grab-cut.cpp
image-remap/: remap.cpp
util/: colorReduce.cpp  colorReduce.h  sharpen.cpp  sharpen.h
